Components and routing added

--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,11 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "src/styles.css",
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeng/resources/themes/saga-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css"
             ],
             "scripts": []
           },
@@ -119,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "babysitter-ui"
+    }
+  },
+  "defaultProject": "babysitter-ui",
+  "cli": {
+    "analytics": "2bdab69d-a5e2-4e7a-9b49-a14a4c48fc1d"
+  }
 }
