--- a/package.json
+++ b/package.json
@@ -21,8 +21,16 @@
     "@angular/platform-browser": "~9.1.11",
     "@angular/platform-browser-dynamic": "~9.1.11",
     "@angular/router": "~9.1.11",
+    "@fortawesome/angular-fontawesome": "^0.6.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/free-regular-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@ng-bootstrap/ng-bootstrap": "^6.2.0",
+    "angular-fontawesome": "^1.0.0",
     "bootstrap": "^4.4.0",
+    "font-awesome": "^4.7.0",
+    "fontawesome": "^5.6.3",
     "primeicons": "^4.0.0",
     "primeng": "^10.0.3",
     "rxjs": "~6.5.4",
